--- a/style.css
+++ b/style.css
@@ -1,64 +1,63 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html,
 body {
-    overflow: hidden;
-    background-color: #16000a;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: #2c3e50
 }
 
-body {
-    -webkit-font-soothing: antialiased;
-    color: #ffdada;
+.box {
+	width: 1000px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: flex;
+	flex-direction: column;
 }
 
-.webgl {
-    position: fixed;
-    width: 100vw;
-    height: 100vw;
-    top: 0;
-    left: 0;
-    outline: none;
+#pinkboard {
+	position: relative;
+	margin: auto;
+	height: 750px;
+	width: 750px;
+	animation: animate 1.2s infinite;
 }
 
-body::before{
-    content: "";
-    position: absolute;
-    border: 8px solid;
-    inset: 1rem;
-    z-index: 100;
-    pointer-events: none;
+#pinkboard:before, #pinkboard:after {
+	content: '';
+	position: absolute;
+	background: #d63031;
+	width: 100px;
+	height: 160px;
+	border-top-left-radius: 50px;
+	border-top-right-radius: 50px;
 }
 
-h1{
-    position: absolute;
-    top: 10vh;
-    left: 2.5rem;
-    right: 1rem;
-    text-align: center;
-    font-size: max(1rem, 3vh);
+#pinkboard:before {
+	left: 100px;
+	transform: rotate(-45deg);
+	transform-origin: 0 100%;
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25),
+				0 10px 10px rgba(0,0,0,0.22);
 }
 
-button {
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    height: 12vh;
-    width: 12vh;
-    transform: translateY(2vh);
-    right: 0;
-    margin: auto;
-    /* -webkit-appearance: none; */
-    background: transparent;
-    color: inherit;
-    border: none;
-    cursor: pointer;
+#pinkboard:after {
+	left: 0;
+	transform: rotate(45deg);
+	transform-origin: 100% 100%;
 }
 
-svg{
-    width: 3.5vh;
+@keyframes animate {
+	0% {
+		transform: scale(1);
+	}
+	30% {
+		transform: scale(.8);
+	}
+	60% {
+		transform: scale(1.2);
+	}
+	100% {
+		transform: scale(1);
+	}
 }
